# unit-testing-examples

./: .gitmodules
gtest/: CMakeLists.txt  greeting_service_test.cpp  main.cpp
gtest/lib/: greeting_service.hpp  time_of_day_system.hpp
java/: build.gradle
java/src/main/java/com/example/demo/moretestable/: GreetingService.java  TimeOfDaySystem.java
java/src/main/java/com/example/demo/mosttestable/: GreetingService.java  TimeOfDaySystem.java  TimeOfDaySystemImpl.java
java/src/main/java/com/example/demo/untestable/: GreetingService.java  TimeOfDaySystem.java
java/src/test/java/com/example/demo/moretestable/: GreetingServiceTest.java
java/src/test/java/com/example/demo/mosttestable/: GreetingServiceTest.java
java/src/test/java/com/example/demo/untestable/: GreetingServiceTest.java
